# PySchemaElectrical

./: .coverage  .gitignore  AGENTS.md  AVAILABLE_SYMBOLS.md  CLAUDE.md  GEMINI.md  LICENSE  PACKAGING.md  README.md  SYMBOLS.md  TODO.md  block_changes.md  build_examples.ps1  claude_setup_guide.md  create_library_demo.py  library_improvements.md  output_log.txt  pyproject.toml  pyschemaelectrical_API_guide.md  render_all_examples.ps1  schematika_API_guide.md  suggestion.md  test_final.txt  test_output.txt  todo.md  ty-todo.md
.agent/rules/: AGENTS.MD  GEMINI.md
.agent/workflows/: gentest.md
.claude/: qc-baselines.json  settings.json
.claude/qc-reports/: 2026-02-21.md
.claude/skills/library-health-check/: SKILL.md
docs/: AGENTS.md  AUTONUMBERING.md  IEC_LIBRARY_PRINCIPLES.md  MOTOR_VALVE_SYMBOLS.md  NAMING_CONVENTION.md  TERMINAL_NUMBERING_GUIDE.md
docs/guides/: PIN_CONFIGURATION.md
docs/superpowers/specs/: 2026-03-10-pid-module-design.md
examples/: QUICKSTART.md  README.md  __init__.py  autonumbering_demo.py  constants.py  constants_examples.py  contactor_demo.py  debug_ports.py  demo_circuit.py  demo_spdt.py  demo_system.py  dynamic_block_demo.py  example_all_circuits.py  example_changeover.py  example_descriptors.py  example_dol_starter.py  example_dynamic_block.py  example_dynamic_block_nonuniform.py  example_emergency_stop.py  example_motor_control.py  example_motor_symbol.py  example_pin_configurations.py  example_plc_mapper.py  example_power_distribution.py  example_project.py  example_psu.py  example_state_threading.py  example_switch.py  example_turn_switch.py  example_two_coils.py  example_voltage_monitor.py  example_wire_labels.py  multi_circuit_demo.py  new_api_demo.py  pump_example.py  simple_demo.py  test_labeled_connection.py  test_wire_label.py  three_pole_demo.py  three_pole_spdt_demo.py
examples/output/: complete_system_terminals.csv  demo_system.csv  demo_system_components.csv  system_terminals.csv
iec_lib/: constants.py  core.py  layout.py  parts.py  primitives.py  renderer.py  system.py  system_analysis.py  transform.py  wire_labels.py
scripts/: pid_review.py
src/: layout.py  primitives.py  system_analysis.py
src/pyschemaelectrical/: __init__.py  autonumbering.py  builder.py  cable_export.py  circuit_patterns.py  connection_registry.py  constants.py  descriptors.py  exceptions.py  field_devices.py  internal_device.py  layout.py  parts.py  plc.py  plc_resolver.py  primitives.py  project.py  renderer.py  simple_api.py  system.py  system_analysis.py  terminal.py  transform.py  wire.py
src/pyschemaelectrical.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/pyschemaelectrical/core/: __init__.py  autonumbering.py  constants.py  geometry.py  parts.py  primitives.py  renderer.py  state.py  symbol.py  (+1 more)
src/schematika/: __init__.py  project.py
src/symbols/: __init__.py  protection.py
tests/: conftest.py  demo_std_circuits.py  test_autonumbering.py  test_autonumbering_advanced.py  test_core.py  test_library.py  test_parts.py  test_primitives.py  test_renderer.py  test_renderer_advanced.py  test_system.py  test_transform.py
tests/integration/: test_coil_contact_pair.py  test_std_circuits.py  test_std_circuits_multicount.py
tests/unit/: test_auto_pin_allocation.py  test_builder.py  test_cable_export.py  test_catalog.py  test_connection_registry.py  test_descriptors.py  test_exceptions.py  test_export_utils.py  test_field_devices.py  test_frame_generator.py  test_internal_device.py  test_layout.py  test_markdown_converter.py  test_model_core.py  test_motor_ct.py  test_parts.py  test_pid_builder.py  test_pid_diagram.py  test_pid_standards.py  test_pid_symbols.py  test_pid_validation.py  test_plc_mapper.py  test_plc_resolver.py  test_power_distribution.py  test_primitives.py  test_project.py  test_project_pid.py  test_references.py  test_renderer.py  test_reuse_tags.py  test_state.py  test_symbols.py  test_system.py  test_system_analysis.py  test_terminal_bridges.py  test_terminal_sharing.py  test_terminal_type.py  test_transform.py  test_typst_compiler.py  test_utils.py  (+3 more)
tools/: README.md
tools/cad_parser/: __init__.py  __main__.py  models.py  pyproject.toml  utils.py
tools/cad_parser/parsers/: autocad.py  kicad.py  pdf.py  svg.py
(+112 files in other folders)
