[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyschemaelectrical"
version = "0.1.7"
description = "A Python library for creating electrical schematic diagrams programmatically"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Ole Johan Bondahl" }
]
keywords = ["electrical", "schematic", "diagram", "svg", "iec"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

# Add any runtime dependencies here
dependencies = []

[project.optional-dependencies]
pdf = ["typst"]

[project.urls]
Homepage = "https://github.com/OleJBondahl/PySchemaElectrical"
Repository = "https://github.com/OleJBondahl/PySchemaElectrical"
Issues = "https://github.com/OleJBondahl/PySchemaElectrical/issues"



[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["pyschemaelectrical*"]

[tool.setuptools.package-data]
pyschemaelectrical = ["rendering/typst/templates/*.typ"]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--verbose --cov=src --cov-report=term-missing"

[dependency-groups]
dev = [
    "complexipy>=5.1.0",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "ruff>=0.15.0",
    "ty>=0.0.16",
]

[tool.ruff]
# Same as Black.
line-length = 88
# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "I001"]  # isort disabled: system.system must be first to avoid circular imports
# Inline Typst code in string literals has long lines
"src/pyschemaelectrical/rendering/typst/compiler.py" = ["E501"]


