[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cad-parser"
version = "0.1.0"
description = "CAD file parser producing a unified intermediate format for electrical schematics"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
autocad = ["ezdxf"]
kicad = ["kiutils", "kinparse"]
pdf = ["PyMuPDF"]
svg = ["svgpathtools", "lxml"]
all = [
    "ezdxf",
    "kiutils",
    "kinparse",
    "PyMuPDF",
    "svgpathtools",
    "lxml",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
